<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_menu_home"
    tools:layout_gravity="bottom">

    <LinearLayout
        android:id="@+id/bmhBtnProfile"
        style="@style/Box.DarkMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_menu_user" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Box.TextDarkMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_profile" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bmhBtnExchange"
        style="@style/Box.DarkMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_menu_exchange" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Box.TextDarkMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_exchange" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bmhBtnHistory"
        style="@style/Box.DarkMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_menu_history" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Box.TextDarkMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_history" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>